# craic

./: .gitignore  AGENTS.md  Cargo.toml  ISSUES  Makefile  NOTICE.md  README.md
.cargo/: config.toml
.craic/: config.toml
crates/craic-agent/: Cargo.toml
crates/craic-agent/src/: agent_history.rs  agent_status.rs  agent_usage.rs  ai_commit.rs  lib.rs
crates/craic-agent/src/agent_provider/: agy.rs  codex.rs  mod.rs  opencode.rs
crates/craic-language/: Cargo.toml
crates/craic-language/src/: lib.rs  markdown_lint.rs  spellcheck.rs
crates/craic-language/src/language_support/: highlight.rs  mod.rs  newline.rs  registry.rs
crates/craic-language/src/language_support/queries/: rst.scm
crates/craic-language/src/language_support/suggest/: mod.rs
crates/craic-project/: Cargo.toml
crates/craic-project/src/: lib.rs  workspace_config.rs
crates/craic-project/src/quick_action/: cargo.rs  mod.rs  pyrefly.rs
crates/craic-system/: Cargo.toml
crates/craic-system/src/: lib.rs  workspace.rs
crates/craic-system/src/system/: materialize.rs  mod.rs  path.rs  provider.rs
crates/craic-system/src/system/capabilities/: docker.rs  files.rs  mod.rs  open.rs  shell.rs  terminal_link.rs  url.rs
crates/craic-system/src/system/providers/: mod.rs  url.rs
crates/craic-system/src/system/providers/local/: docker.rs  files.rs  mod.rs  open.rs  shell.rs  terminal_link.rs
crates/craic-system/src/system/providers/local/scripts/: archive_list.py  archive_read.py
crates/craic-system/src/system/providers/ssh/: docker.rs  files.rs  mod.rs  shell.rs  terminal_link.rs
crates/craic-system/src/system/providers/ssh/scripts/: file_signatures.sh  list_workspaces.sh  metadata.sh  move_path.sh  read_with_info.sh  search.py
crates/craic-ui/: Cargo.toml
crates/craic-ui-agent/: Cargo.toml
crates/craic-ui-agent/src/: lib.rs
crates/craic-ui-agent/src/ui/pages/agent/: agent_shell_integration.rs  left.rs  mod.rs  prompts.rs  right.rs  smart_summary.rs
crates/craic-ui-agent/src/ui/pages/agent/provider/: agy.rs  codex.rs  mod.rs  opencode.rs
crates/craic-ui-containers/: Cargo.toml
crates/craic-ui-containers/src/: lib.rs
crates/craic-ui-containers/src/ui/pages/containers/: docker.rs  mod.rs
crates/craic-ui-core/: Cargo.toml
crates/craic-ui-core/src/: lib.rs
crates/craic-ui-core/src/reconcile/: gtk.rs
crates/craic-ui-core/src/ui/: canvas_painter.rs  canvas_scroll.rs  canvas_scrollbar.rs  command_mailbox.rs  dialogs.rs  file_row.rs  file_status.rs  file_type.rs  left_clamp.rs  mod.rs  pages.rs  picker.rs
crates/craic-ui-core/src/ui/components/: mod.rs  search.rs  tabbed_picker.rs
crates/craic-ui-core/src/ui/components/context_menu/: mod.rs
crates/craic-ui-core/src/ui/components/tree_view/: disclosure.rs  drag_drop.rs  icon_row.rs  mod.rs  tree_row.rs  view.rs
crates/craic-ui-editor/: Cargo.toml
crates/craic-ui-editor/benches/: code_editor_offscreen.rs
crates/craic-ui-editor/src/: lib.rs
crates/craic-ui-editor/src/ui/: mod.rs
crates/craic-ui-editor/src/ui/content/: canvas_overshoot.rs  diff_canvas.rs  diff_layout.rs  diff_view.rs  mod.rs  skia_canvas.rs  skia_gl_area.rs
crates/craic-ui-editor/src/ui/content/code_editor/: bench_support.rs  canvas.rs  input.rs  mod.rs  render.rs  selection.rs  text_buffer.rs
crates/craic-ui-editor/src/ui/content/code_editor/render/: highlights.rs  line_numbers.rs  theme.rs
crates/craic-ui-file/: Cargo.toml
crates/craic-ui-file/src/: lib.rs
crates/craic-ui-file/src/ui/pages/file/: left.rs  mod.rs  right.rs
crates/craic-ui-file/src/ui/pages/file/provider/: csv.rs  folder.rs  font.rs  html.rs  markdown.rs  media.rs  mod.rs  notebook.rs  notebook_readonly.rs  pdf.rs  safetensors.rs  sqlite.rs  svg.rs  table_view.rs  text.rs
crates/craic-ui-file/src/ui/pages/file/provider/image_viewer/: loader.rs  mod.rs  zoom.rs
crates/craic-ui-file/src/ui/sidebar/: file_browser.rs
crates/craic-ui-file/src/ui/sidebar/file_browser/: file_ops.rs  ignore_status.rs  menu.rs  rows.rs  search.rs  transfer.rs  tree.rs  tree_loader.rs  watch.rs
crates/craic-ui-preview/: Cargo.toml
crates/craic-ui-preview/src/: lib.rs  markdown_preview.rs
crates/craic-ui-preview/src/markdown_preview_web/: app-integration.css  markdown-preview.js  mod.rs
crates/craic-ui-preview/src/ui/: mod.rs
crates/craic-ui-preview/src/ui/content/: binary_preview.rs  folder_view.rs  mod.rs  pdf_preview.rs
crates/craic-ui-terminal/: Cargo.toml
crates/craic-ui-terminal/src/: lib.rs  process.rs  terminal.rs  vte.rs
crates/craic-ui-terminal/src/alacritty/: mod.rs  renderer.rs
crates/craic-ui-terminal/src/ui/: mod.rs
crates/craic-ui-terminal/src/ui/components/: mod.rs  terminal.rs
crates/craic-ui-vcs/: Cargo.toml
crates/craic-ui-vcs/src/: lib.rs  suggestions.rs
crates/craic-ui-vcs/src/ui/: file_manager.rs
crates/craic-ui-vcs/src/ui/pages/: preview_reconcile.rs  preview_state.rs
crates/craic-ui-vcs/src/ui/pages/changes/: left.rs  mod.rs  right.rs
crates/craic-ui-vcs/src/ui/pages/history/: mod.rs  right.rs
crates/craic-ui-vcs/src/ui/sidebar/: changes.rs  changes_panel.rs  commit_panel.rs  history.rs
crates/craic-ui/src/: crash_log.rs  lib.rs  ui.rs
crates/craic-ui/src/ui/: app_menu.rs  branch_actions.rs  content.rs  dialogs.rs  git_actions.rs  preferences.rs  shell_actions.rs  shortcuts.rs  sidebar.rs
crates/craic-ui/src/ui/pages/: mod.rs
crates/craic-ui/src/ui/sidebar/: mode_switcher.rs  repositories.rs
crates/craic-vcs/: Cargo.toml
crates/craic-vcs/src/: bitbucket.rs  gitignore.rs  gitlab.rs  lib.rs
crates/craic-vcs/src/git/: access.rs  diff.rs  mod.rs  types.rs
crates/craic-vcs/src/git/scripts/: commit_message_diff.py  diff.py  initialize_repository.sh
crates/craic-vcs/src/github/: cli.rs  mod.rs
crates/craic-vcs/src/github/scripts/: gh_with_account.sh
crates/craic-vcs/src/github_access/: local.rs  mod.rs  ssh.rs
data/: dev.craic.Craic.desktop.in
docs/: pyproject.toml
src/: ai_commit.rs  config.rs  crash_log.rs  git.rs  github.rs  gitignore.rs  main.rs  markdown_lint.rs  quick_action.rs  spellcheck.rs  terminal.rs  ui.rs  (+2 more)
(+234 files in other folders)
