[package]
name = "craic-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
craic-config.workspace = true
craic-system.workspace = true
craic-vcs.workspace = true
libc.workspace = true
log.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

