[package]
name = "craic-language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
rumdl.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-c.workspace = true
tree-sitter-caddy.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-css.workspace = true
tree-sitter-cuda.workspace = true
tree-sitter-go.workspace = true
tree-sitter-hlsl.workspace = true
tree-sitter-html.workspace = true
tree-sitter-ini.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-make.workspace = true
tree-sitter-md.workspace = true
tree-sitter-powershell.workspace = true
tree-sitter-python.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rst.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-scheme.workspace = true
tree-sitter-slang.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-xml.workspace = true
tree-sitter-yaml.workspace = true
toml.workspace = true
typos.workspace = true
typos-dict.workspace = true
unicase.workspace = true
