[package]
name = "craic-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
craic-system.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-make.workspace = true
walkdir.workspace = true
