[package]
name = "craic-system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
craic-config.workspace = true
gtk.workspace = true
libc.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
walkdir.workspace = true
