[package]
name = "craic-ui-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adw.workspace = true
craic-agent.workspace = true
craic-config.workspace = true
craic-system.workspace = true
craic-vcs.workspace = true
craic-ui-core.workspace = true
craic-ui-terminal.workspace = true
gtk.workspace = true
libc.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
