[package]
name = "craic-ui-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adw.workspace = true
cairo.workspace = true
craic-language.workspace = true
craic-file-support.workspace = true
craic-project.workspace = true
craic-system.workspace = true
craic-vcs.workspace = true
gtk.workspace = true
libc.workspace = true
log.workspace = true
moka.workspace = true
regex.workspace = true
