[package]
name = "craic-ui-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adw.workspace = true
alacritty_terminal.workspace = true
cairo.workspace = true
craic-config.workspace = true
craic-system.workspace = true
craic-ui-core.workspace = true
gtk.workspace = true
epoxy.workspace = true
libc.workspace = true
libpanel.workspace = true
log.workspace = true
pangocairo.workspace = true
regex.workspace = true
