[package]
name = "craic-ui-vcs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adw.workspace = true
craic-agent.workspace = true
craic-config.workspace = true
craic-system.workspace = true
craic-vcs.workspace = true
craic-ui-core.workspace = true
craic-ui-editor.workspace = true
craic-ui-preview.workspace = true
gtk.workspace = true
log.workspace = true
pango.workspace = true
