[package]
name = "craic-vcs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
craic-config.workspace = true
craic-project.workspace = true
craic-system.workspace = true
log.workspace = true
moka.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
